--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,7 @@
 @font-face {
   font-family: "MoralerspaceNeon";
   src: url("/MoralerspaceNeon-Regular.woff2") format("woff2");
+  font-display: block;
 }
 
 @layer base {
